--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,9 +1,81 @@
-navbar.income=Income
-navbar.expense=Expense
-change.language=Change language
-navbar.balance=Balance
-navbar.logout=Logout
-income.add=Add income
-expense.add=Add expense
-balance.current=Current balance
-password.notmatch=Passwords does not match
+#navbar.income=Income
+#navbar.expense=Expense
+#change.language=Change language
+#navbar.balance=Balance
+#navbar.logout=Logout
+#income.add=Add income
+#expense.add=Add expense
+#balance.current=Current balance
+#password.notmatch=Passwords does not match
+navbar.schedule=Schedule
+navbar.movies=Movies
+navbar.signin=Sign in
+navbar.signout=Sign out
+navbar.search.text=Enter movie name
+navbar.search.button=Search
+footer.about=About us
+footer.contacts=Contacts
+footer.rights=All rights reserved
+footer.follow=Follow us
+footer.location=Location
+footer.app=Android app
+schedules.edit=Edit
+schedules.choose.date=Choose date
+schedules.date=Date
+schedules.month=Month
+schedules.day=Day
+schedules.movie=Movie
+schedules.start.time=Time
+schedules.hall=Hall
+schedules.price=Ticket price
+home.buy.ticket=Buy ticket
+create.photo=Photo
+create.upload=Upload
+create.default=Create
+create.change=Change
+create.name=Name
+create.description=Description
+create.duration=Duration
+create.actors=Actors
+create.find.actor=Search actor
+create.actor=Create actor
+create.actor.first.name=First name
+create.actor.last.name=Last name
+create.add.seance=Add seance
+create.save=Save changes
+login.email_or_name=Email or username
+login.password=Password
+login.default=Sign in
+registration=Registration
+registration.username=Username
+registration.first.name=First name
+registration.last.name=Last name
+registration.email=Email
+registration.phone=Phone number
+registration.password=Password
+registration.confirm=Confirm password
+location.cinemas=Cinemas List
+location.address=Address
+movie.description=Description
+movie.name=Name
+cabinet.default=Personal cabinet
+cabinet.tickets=My tickets
+ticket.default=Ticket
+ticket.buy=Buy
+movies.default=Movies
+hall.places=Places
+day.monday=Monday
+day.tuesday=Tuesday
+day.wednesday=Wednesday
+day.thursday=Thursday
+day.friday=Friday
+day.saturday=Saturday
+day.sunday=Sunday
+city1=Lviv
+city2=Kyiv
+city1.place1=st. Kulparkivska, 226a - Market "Victoria Gardens"
+city2.place1=Sports Square, 1a - Market "Gulliver"
+city2.place2=st. Antonovycha, 176 - Market "Ocean Plaza"
+state.not.match=Passwords not match
+state.required.field=field is required
+footer.info=Point Cinema - the first cinema that united several countries on one screen. Availability of cinemas in all major European countries: Germany, Great Britain, Sweden, Poland, Ukraine, Italy and others.
