--- a/src/main/resources/messages_ua.properties
+++ b/src/main/resources/messages_ua.properties
@@ -1,9 +1,83 @@
-navbar.income=Доходи
-navbar.expense=Витрати
-change.language=Змінити мову
-navbar.balance=Баланс
-navbar.logout=Вийти
-income.add=Новий дохід
-expense.add=Нові витрати
-balance.current=Актуальний баланс
-password.notmatch=Паролі не співпадають
+#navbar.income=Доходи
+#navbar.expense=Витрати
+#change.language=Змінити мову
+#navbar.balance=Баланс
+#navbar.logout=Вийти
+#income.add=Новий дохід
+#expense.add=Нові витрати
+#balance.current=Актуальний баланс
+#password.notmatch=Паролі не співпадають
+navbar.schedule=Розклад
+navbar.movies=Фільми
+navbar.signin=Ввійти
+navbar.signout=Вийти
+navbar.search.text=Введіть назву фільму
+navbar.search.button=Пошук
+footer.about=Про нас
+footer.contacts=Контакти
+footer.location=Розташування
+footer.rights=Усі права захищені
+footer.follow=Підписатися
+footer.app=Додаток
+schedules.edit=Редагувати
+schedules.choose.date=Вибрати дату
+schedules.date=Дата
+schedules.month=Місяць
+schedules.day=День
+schedules.movie=Фільм
+schedules.start.time=Час
+schedules.hall=Зал
+schedules.price=Ціна квитка
+home.buy.ticket=Купити квиток
+create.photo=Зображення
+create.upload=Завантажити
+create.default=Створити
+create.change=Змінити
+create.name=Назва
+create.description=Опис
+create.duration=Тривалість
+create.actors=Актори
+create.find.actor=Знайти актора
+create.actor=Створити актора
+create.actor.first.name=Ім'я
+create.actor.last.name=Прізвище
+create.add.seance=Додати сеанс
+create.save=Зберегти зміни
+login.email_or_name=Email або Ім'я користувача
+login.password=Пароль
+login.default=Ввійти
+registration=Зареєструватися
+registration.username=Ім'я користувача
+registration.first.name=Ім'я
+registration.last.name=Прізвище
+registration.email=Email
+registration.phone=Номер телефону
+registration.password=Пароль
+registration.confirm=Підтвердження пароля
+location.cinemas=Кінотеатри
+location.address=Адреса
+movie.description=Опис
+movie.name=Назва
+cabinet.default=Кабінет користувача
+cabinet.tickets=Мої квитки
+ticket.default=Квиток
+ticket.buy=Купити
+movies.default=Фільми
+hall.places=Місця
+day.monday=Понеділок
+day.tuesday=Вівторок
+day.wednesday=Середа
+day.thursday=Четвер
+day.friday=П'ятниця
+day.saturday=Субота
+day.sunday=Неділя
+city1=Львів
+city2=Київ
+city1.place1=вул. Кульпарківська, 226a - ТРЦ "Victoria Gardens"
+city2.place1=Спортивна площа, 1a - ТРЦ "Gulliver"
+city2.place2=вул. Антоновича, 176 - ТРЦ "Ocean Plaza"
+state.not.match=Паролі не співпадають
+state.required.field=обов'язкове поле
+footer.info=Кінотеатр Point - це перший кінотеатр, який об'єднав декілька \
+  країн\
+   за одним екраном. Наявність кінотеатрів у всіх головних країнах Європи: Німеччина, Великобританія, Швеція, Польща, Україна, Італія та інші.
