--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -13,6 +13,7 @@ navbar.signin=Sign in
 navbar.signout=Sign out
 navbar.search.text=Enter movie name
 navbar.search.button=Search
+navbar.home=Home
 footer.about=About us
 footer.contacts=Contacts
 footer.rights=All rights reserved
