--- a/src/main/resources/messages_ua.properties
+++ b/src/main/resources/messages_ua.properties
@@ -13,6 +13,7 @@ navbar.signin=Ввійти
 navbar.signout=Вийти
 navbar.search.text=Введіть назву фільму
 navbar.search.button=Пошук
+navbar.home=На головну
 footer.about=Про нас
 footer.contacts=Контакти
 footer.location=Розташування
@@ -78,6 +79,4 @@ city2.place1=Спортивна площа, 1a - ТРЦ "Gulliver"
 city2.place2=вул. Антоновича, 176 - ТРЦ "Ocean Plaza"
 state.not.match=Паролі не співпадають
 state.required.field=обов'язкове поле
-footer.info=Кінотеатр Point - це перший кінотеатр, який об'єднав декілька \
-  країн\
-   за одним екраном. Наявність кінотеатрів у всіх головних країнах Європи: Німеччина, Великобританія, Швеція, Польща, Україна, Італія та інші.
+footer.info=Кінотеатр Point - це перший кінотеатр, який об'єднав декілька країн за одним екраном. Наявність кінотеатрів у всіх головних країнах Європи: Німеччина, Великобританія, Швеція, Польща, Україна, Італія та інші.
