login fixes bug

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -79,4 +79,8 @@ city2.place1=Sports Square, 1a - Market "Gulliver"
 city2.place2=st. Antonovycha, 176 - Market "Ocean Plaza"
 state.not.match=Passwords not match
 state.required.field=field is required
+state.phone.length=invalid phone value
+state.phone.letters=phone cannot contain letters
+state.cannot.contain.number=field cannot contain numbers
+state.email.invalid=invalid mail value
 footer.info=Point Cinema - the first cinema that united several countries on one screen. Availability of cinemas in all major European countries: Germany, Great Britain, Sweden, Poland, Ukraine, Italy and others.
