--- a/src/main/resources/messages_ua.properties
+++ b/src/main/resources/messages_ua.properties
@@ -79,4 +79,8 @@ city2.place1=Спортивна площа, 1a - ТРЦ "Gulliver"
 city2.place2=вул. Антоновича, 176 - ТРЦ "Ocean Plaza"
 state.not.match=Паролі не співпадають
 state.required.field=обов'язкове поле
+state.phone.length=не валідний номер телефону
+state.phone.letters=номер телефону не може містити літери
+state.cannot.contain.number=поле не може містити цифри
+state.email.invalid=не валідний формат пошти
 footer.info=Кінотеатр Point - це перший кінотеатр, який об'єднав декілька країн за одним екраном. Наявність кінотеатрів у всіх головних країнах Європи: Німеччина, Великобританія, Швеція, Польща, Україна, Італія та інші.
