--- a/src/main/resources/messages_ua.properties
+++ b/src/main/resources/messages_ua.properties
@@ -72,15 +72,20 @@ day.thursday=Четвер
 day.friday=П'ятниця
 day.saturday=Субота
 day.sunday=Неділя
+number.default=Номер
 city1=Львів
 city2=Київ
 city1.place1=вул. Кульпарківська, 226a - ТРЦ "Victoria Gardens"
 city2.place1=Спортивна площа, 1a - ТРЦ "Gulliver"
 city2.place2=вул. Антоновича, 176 - ТРЦ "Ocean Plaza"
-state.not.match=Паролі не співпадають
+state.password.not.match=Паролі не співпадають
 state.required.field=обов'язкове поле
 state.phone.length=не валідний номер телефону
 state.phone.letters=номер телефону не може містити літери
 state.cannot.contain.number=поле не може містити цифри
 state.email.invalid=не валідний формат пошти
+state.username.already.use=ім'я користувача уже зайняте
+state.email.already.use=користувач з такою почтою уже існує
+state.phone.already.use=користувач з таким номером телефону уже існує
+state.not.specified=Не вказано 
 footer.info=Кінотеатр Point - це перший кінотеатр, який об'єднав декілька країн за одним екраном. Наявність кінотеатрів у всіх головних країнах Європи: Німеччина, Великобританія, Швеція, Польща, Україна, Італія та інші.
