--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -72,15 +72,20 @@ day.thursday=Thursday
 day.friday=Friday
 day.saturday=Saturday
 day.sunday=Sunday
+number.default=Number
 city1=Lviv
 city2=Kyiv
 city1.place1=st. Kulparkivska, 226a - Market "Victoria Gardens"
 city2.place1=Sports Square, 1a - Market "Gulliver"
 city2.place2=st. Antonovycha, 176 - Market "Ocean Plaza"
-state.not.match=Passwords not match
+state.password.not.match=Passwords not match
 state.required.field=field is required
 state.phone.length=invalid phone value
 state.phone.letters=phone cannot contain letters
 state.cannot.contain.number=field cannot contain numbers
 state.email.invalid=invalid mail value
+state.username.already.use=user with same username is already exists
+state.email.already.use=user with same email is already exists
+state.phone.already.use=user with same phone is already exists
+state.not.specified=Not specified 
 footer.info=Point Cinema - the first cinema that united several countries on one screen. Availability of cinemas in all major European countries: Germany, Great Britain, Sweden, Poland, Ukraine, Italy and others.
