--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -63,15 +63,32 @@ cabinet.default=Personal cabinet
 cabinet.tickets=My tickets
 ticket.default=Ticket
 ticket.buy=Buy
+ticket.row=Row
+ticket.price=Price
+ticket.count=Tickets
+ticket.column=Place
 movies.default=Movies
 hall.places=Places
-day.monday=Monday
-day.tuesday=Tuesday
-day.wednesday=Wednesday
-day.thursday=Thursday
-day.friday=Friday
-day.saturday=Saturday
-day.sunday=Sunday
+day.monday=Mon
+day.tuesday=Tue
+day.wednesday=Wed
+day.thursday=Thu
+day.friday=Fri
+day.friday_js=Fri
+day.saturday=Sat
+day.sunday=Sun
+month.june=June
+month.july=July
+month.august=August
+month.september=September
+month.october=October
+month.november=November
+month.december=December
+month.january=January
+month.february=February
+month.march=March
+month.april=April
+month.may=May
 number.default=Number
 city1=Lviv
 city2=Kyiv
@@ -89,3 +106,4 @@ state.email.already.use=user with same email is already exists
 state.phone.already.use=user with same phone is already exists
 state.not.specified=Not specified 
 footer.info=Point Cinema - the first cinema that united several countries on one screen. Availability of cinemas in all major European countries: Germany, Great Britain, Sweden, Poland, Ukraine, Italy and others.
+state.date.not.match=Please choose date
