--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -26,6 +26,8 @@ schedules.date=Date
 schedules.month=Month
 schedules.day=Day
 schedules.movie=Movie
+schedules.date.from=From
+schedules.date.to=To
 schedules.start.time=Time
 schedules.hall=Hall
 schedules.price=Ticket price
