--- a/src/main/resources/messages_ua.properties
+++ b/src/main/resources/messages_ua.properties
@@ -26,6 +26,8 @@ schedules.date=Дата
 schedules.month=Місяць
 schedules.day=День
 schedules.movie=Фільм
+schedules.date.from=Від
+schedules.date.to=До
 schedules.start.time=Час
 schedules.hall=Зал
 schedules.price=Ціна квитка
