modification styles resolve some repository issues

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -33,6 +33,7 @@ create.duration=Duration
 create.actors=Actors
 create.find.actor=Search actor
 create.actor=Create actor
+create.movie=Create movie
 create.actor.first.name=First name
 create.actor.last.name=Last name
 create.add.seance=Add seance
