--- a/src/main/resources/messages_ua.properties
+++ b/src/main/resources/messages_ua.properties
@@ -33,6 +33,7 @@ create.duration=Тривалість
 create.actors=Актори
 create.find.actor=Знайти актора
 create.actor=Створити актора
+create.movie=Додати фільм
 create.actor.first.name=Ім'я
 create.actor.last.name=Прізвище
 create.add.seance=Додати сеанс
