page stylization minimum completed

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -101,3 +101,5 @@ state.phone.already.use=user with same phone is already exists
 state.not.specified=Not specified
 footer.info=Point Cinema - the first cinema that united several countries on one screen. Availability of cinemas in all major European countries: Germany, Great Britain, Sweden, Poland, Ukraine, Italy and others.
 state.date.not.match=Please choose date
+state.page.not.found=Page not found
+state.resource.not.found=Resource not found
