--- a/src/main/resources/messages_ua.properties
+++ b/src/main/resources/messages_ua.properties
@@ -101,3 +101,5 @@ state.phone.already.use=користувач з таким номером тел
 state.not.specified=Не вказано
 footer.info=Кінотеатр Point - це перший кінотеатр, який об'єднав декілька країн за одним екраном. Наявність кінотеатрів у всіх головних країнах Європи: Німеччина, Великобританія, Швеція, Польща, Україна, Італія та інші.
 state.date.not.match=Будь ласка виберіть дату
+state.page.not.found=Сторінку не знайдено
+state.resource.not.found=Ресурс застарілий
