clean up code localisation

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -2,7 +2,6 @@ navbar.schedule=Schedule
 navbar.movies=Movies
 navbar.signin=Sign in
 navbar.signout=Sign out
-navbar.search.text=Enter movie name
 navbar.search.button=Search
 navbar.home=Home
 footer.about=About us
@@ -11,32 +10,27 @@ footer.rights=All rights reserved
 footer.follow=Follow us
 footer.location=Location
 footer.app=Android app
-schedules.edit=Edit
-schedules.choose.date=Choose date
 schedules.date=Date
-schedules.month=Month
 schedules.day=Day
-schedules.movie=Movie
 schedules.date.from=From
 schedules.date.to=To
 schedules.start.time=Time
 schedules.hall=Hall
 schedules.price=Ticket price
 home.buy.ticket=Buy ticket
-create.photo=Photo
 create.upload=Upload
 create.default=Create
 create.change=Change
 create.name=Name
+create.hour.character=h
+create.minute.character=m
 create.description=Description
 create.duration=Duration
 create.actors=Actors
-create.find.actor=Search actor
 create.actor=Create actor
 create.movie=Create movie
 create.actor.first.name=First name
 create.actor.last.name=Last name
-create.add.seance=Add seance
 create.save=Save changes
 login.email_or_name=Email or username
 login.password=Password
@@ -49,20 +43,14 @@ registration.email=Email
 registration.phone=Phone number
 registration.password=Password
 registration.confirm=Confirm password
-location.cinemas=Cinemas List
-location.address=Address
-movie.description=Description
 movie.name=Name
 cabinet.default=Personal cabinet
 cabinet.tickets=My tickets
-ticket.default=Ticket
 ticket.buy=Buy
 ticket.row=Row
 ticket.price=Price
 ticket.count=Tickets
 ticket.column=Place
-movies.default=Movies
-hall.places=Places
 day.monday=Mon
 day.tuesday=Tue
 day.wednesday=Wed
@@ -103,3 +91,4 @@ footer.info=Point Cinema - the first cinema that united several countries on one
 state.date.not.match=Please choose date
 state.page.not.found=Page not found
 state.resource.not.found=Resource not found
+state.place.not.selected=Please choose place
