clean up code localisation testing operations testing fix bugs

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -28,6 +28,7 @@ create.description=Description
 create.duration=Duration
 create.actors=Actors
 create.actor=Create actor
+create.new.actor=Create new actor
 create.movie=Create movie
 create.actor.first.name=First name
 create.actor.last.name=Last name
