--- a/src/main/resources/messages_ua.properties
+++ b/src/main/resources/messages_ua.properties
@@ -28,6 +28,7 @@ create.description=Опис
 create.duration=Тривалість
 create.actors=Актори
 create.actor=Створити актора
+create.new.actor=Створити нового актора
 create.movie=Додати фільм
 create.actor.first.name=Ім'я
 create.actor.last.name=Прізвище
