--- a/src/main/resources/messages_ua.properties
+++ b/src/main/resources/messages_ua.properties
@@ -93,3 +93,4 @@ state.date.not.match=Будь ласка виберіть дату
 state.page.not.found=Сторінку не знайдено
 state.resource.not.found=Ресурс застарілий
 state.place.not.selected=Будь ласка виберіть місце
+state.access.denied=Access denied<br>You are not admin
